--- a/portfolio.html
+++ b/portfolio.html
@@ -13,32 +13,33 @@
   </head>
 
   <body>
-    <header>
-      <div class="container">
-        <a class="logo" href="./index.html"><span>Web</span>Studio</a>
+    <header class="page-header">
+      <div class="page-header__container">
+        <a class="logo" href="./index.html"><span class="logo--accent">Web</span>Studio</a>
         <nav>
           <ul class="navigation">
-            <li class="item">
-              <a class="navigation-link" href="./index.html">Студія</a>
+            <li class="navigation__item">
+              <a class="navigation__link" href="./index.html">Студія</a>
             </li>
-            <li class="item">
-              <a class="navigation-link current" href="./portfolio.html">Портфоліо</a>
+            <li class="navigation__item">
+              <a class="navigation__link current" href="./portfolio.html">Портфоліо</a>
             </li>
-            <li class="item">
-              <a class="navigation-link" href="#">Контакти</a>
+            <li class="navigation__item">
+              <a class="navigation__link" href="#">Контакти</a>
             </li>
           </ul>
         </nav>
 
         <ul class="contacts">
-          <li class="item">
-            <a class="contact-info" href="mailto:info@devstudio.com"
-              ><svg class="icon-envelope" width="16" height="12"><use href="./images/icons.svg#envelope"></use></svg>info@devstudio.com</a
+          <li class="contacts__item">
+            <a class="contacts__link" href="mailto:info@devstudio.com"
+              ><svg class="contacts__icon--envelope" width="16" height="12"><use href="./images/icons.svg#envelope"></use></svg>info@devstudio.com</a
             >
           </li>
-          <li class="item">
-            <a class="contact-info" href="tel:+380961111111"
-              ><svg class="icon-smartphone" width="10" height="16"><use href="./images/icons.svg#smartphone"></use></svg>+38 096 111 11 11</a
+          <li class="contacts__item">
+            <a class="contacts__link" href="tel:+380961111111"
+              ><svg class="contacts__icon--smartphone" width="10" height="16"><use href="./images/icons.svg#smartphone"></use></svg>+38 096 111 11
+              11</a
             >
           </li>
         </ul>
@@ -46,133 +47,133 @@
     </header>
 
     <main>
-      <section class="section filter">
-        <div class="container">
+      <section class="filter section">
+        <div class="filter container">
           <h1 class="visually-hidden">Наші роботи</h1>
-          <ul class="filter-list">
-            <li class="filter-item"><button class="filter-button active" type="button">Усі</button></li>
-            <li class="filter-item"><button class="filter-button" type="button">Веб-сайти</button></li>
-            <li class="filter-item"><button class="filter-button" type="button">Додатки</button></li>
-            <li class="filter-item"><button class="filter-button" type="button">Дизайн</button></li>
-            <li class="filter-item"><button class="filter-button" type="button">Маркетинг</button></li>
+          <ul class="filter__list">
+            <li class="filter__item"><button class="filter__button active" type="button">Усі</button></li>
+            <li class="filter__item"><button class="filter__button" type="button">Веб-сайти</button></li>
+            <li class="filter__item"><button class="filter__button" type="button">Додатки</button></li>
+            <li class="filter__item"><button class="filter__button" type="button">Дизайн</button></li>
+            <li class="filter__item"><button class="filter__button" type="button">Маркетинг</button></li>
           </ul>
 
-          <ul class="filtered-list">
-            <li class="filtered-products">
-              <a class="filtered-link" href="#">
-                <p class="portfolio-overlay-text">
+          <ul class="filtered__list">
+            <li class="filtered__item">
+              <a class="filtered__link" href="#">
+                <p class="filtered__text--overlay">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
                   відомості про компанію чи приватну особу.
                 </p>
-                <img src="./images/technocrack.jpg" alt="Technocrack web-site image" width="370" />
-                <div class="filtered-text">
-                  <h3 class="filtered-title">Технокряк</h3>
-                  <p class="filtered-desc">Веб-сайт</p>
+                <img class="filtered__item--image" src="./images/technocrack.jpg" alt="Technocrack web-site image" width="370" />
+                <div class="filtered__text">
+                  <h3 class="filtered__title">Технокряк</h3>
+                  <p class="filtered__desc">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="filtered-products">
-              <a class="filtered-link" href="#">
-                <p class="portfolio-overlay-text">
+            <li class="filtered__item">
+              <a class="filtered__link" href="#">
+                <p class="filtered__text--overlay">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
                   відомості про компанію чи приватну особу.
                 </p>
-                <img src="./images/neworlean-vs-goldenstar.jpg" alt="Poster New Orlean vs Golden Star" width="370" />
-                <div class="filtered-text">
-                  <h3 class="filtered-title">Постер New Orlean vs Golden Star</h3>
-                  <p class="filtered-desc">Дизайн</p>
+                <img class="filtered__item--image" src="./images/neworlean-vs-goldenstar.jpg" alt="Poster New Orlean vs Golden Star" width="370" />
+                <div class="filtered__text">
+                  <h3 class="filtered__title">Постер New Orlean vs Golden Star</h3>
+                  <p class="filtered__desc">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="filtered-products">
-              <a class="filtered-link" href="#">
-                <p class="portfolio-overlay-text">
+            <li class="filtered__item">
+              <a class="filtered__link" href="#">
+                <p class="filtered__text--overlay">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
                   відомості про компанію чи приватну особу.
                 </p>
-                <img src="./images/seafood.jpg" alt="Seafood app image" width="370" />
-                <div class="filtered-text">
-                  <h3 class="filtered-title">Ресторан Seafood</h3>
-                  <p class="filtered-desc">Додаток</p>
+                <img class="filtered__item--image" src="./images/seafood.jpg" alt="Seafood app image" width="370" />
+                <div class="filtered__text">
+                  <h3 class="filtered__title">Ресторан Seafood</h3>
+                  <p class="filtered__desc">Додаток</p>
                 </div>
               </a>
             </li>
-            <li class="filtered-products">
-              <a class="filtered-link" href="#">
-                <p class="portfolio-overlay-text">
+            <li class="filtered__item">
+              <a class="filtered__link" href="#">
+                <p class="filtered__text--overlay">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
                   відомості про компанію чи приватну особу.
                 </p>
-                <img src="./images/prime.jpg" alt="Prime project image" width="370" />
-                <div class="filtered-text">
-                  <h3 class="filtered-title">Проєкт Prime</h3>
-                  <p class="filtered-desc">Маркетинг</p>
+                <img class="filtered__item--image" src="./images/prime.jpg" alt="Prime project image" width="370" />
+                <div class="filtered__text">
+                  <h3 class="filtered__title">Проєкт Prime</h3>
+                  <p class="filtered__desc">Маркетинг</p>
                 </div>
               </a>
             </li>
 
-            <li class="filtered-products">
-              <a class="filtered-link" href="#">
-                <p class="portfolio-overlay-text">
+            <li class="filtered__item">
+              <a class="filtered__link" href="#">
+                <p class="filtered__text--overlay">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
                   відомості про компанію чи приватну особу.
                 </p>
-                <img src="./images/boxes.jpg" alt="Boxes project image" width="370" />
-                <div class="filtered-text">
-                  <h3 class="filtered-title">Проєкт Boxes</h3>
-                  <p class="filtered-desc">Додаток</p>
+                <img class="filtered__item--image" src="./images/boxes.jpg" alt="Boxes project image" width="370" />
+                <div class="filtered__text">
+                  <h3 class="filtered__title">Проєкт Boxes</h3>
+                  <p class="filtered__desc">Додаток</p>
                 </div>
               </a>
             </li>
-            <li class="filtered-products">
-              <a class="filtered-link" href="#">
-                <p class="portfolio-overlay-text">
+            <li class="filtered__item">
+              <a class="filtered__link" href="#">
+                <p class="filtered__text--overlay">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
                   відомості про компанію чи приватну особу.
                 </p>
-                <img src="./images/inspiration.jpg" alt="Inspiration has no Borders web-site image" width="370" />
-                <div class="filtered-text">
-                  <h3 class="filtered-title">Inspiration has no Borders</h3>
-                  <p class="filtered-desc">Веб-сайт</p>
+                <img class="filtered__item--image" src="./images/inspiration.jpg" alt="Inspiration has no Borders web-site image" width="370" />
+                <div class="filtered__text">
+                  <h3 class="filtered__title">Inspiration has no Borders</h3>
+                  <p class="filtered__desc">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="filtered-products">
-              <a class="filtered-link" href="#">
-                <p class="portfolio-overlay-text">
+            <li class="filtered__item">
+              <a class="filtered__link" href="#">
+                <p class="filtered__text--overlay">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
                   відомості про компанію чи приватну особу.
                 </p>
-                <img src="./images/limited-edition.jpg" alt="Limited Edition design image" width="370" />
-                <div class="filtered-text">
-                  <h3 class="filtered-title">Видання Limited Edition</h3>
-                  <p class="filtered-desc">Дизайн</p>
+                <img class="filtered__item--image" src="./images/limited-edition.jpg" alt="Limited Edition design image" width="370" />
+                <div class="filtered__text">
+                  <h3 class="filtered__title">Видання Limited Edition</h3>
+                  <p class="filtered__desc">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="filtered-products">
-              <a class="filtered-link" href="#">
-                <p class="portfolio-overlay-text">
+            <li class="filtered__item">
+              <a class="filtered__link" href="#">
+                <p class="filtered__text--overlay">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
                   відомості про компанію чи приватну особу.
                 </p>
-                <img src="./images/lab.jpg" alt=" LAB project image" width="370" />
-                <div class="filtered-text">
-                  <h3 class="filtered-title">Проєкт LAB</h3>
-                  <p class="filtered-desc">Маркетинг</p>
+                <img class="filtered__item--image" src="./images/lab.jpg" alt=" LAB project image" width="370" />
+                <div class="filtered__text">
+                  <h3 class="filtered__title">Проєкт LAB</h3>
+                  <p class="filtered__desc">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="filtered-products">
-              <a class="filtered-link" href="#">
-                <p class="portfolio-overlay-text">
+            <li class="filtered__item">
+              <a class="filtered__link" href="#">
+                <p class="filtered__text--overlay">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
                   відомості про компанію чи приватну особу.
                 </p>
-                <img src="./images/growing-business.jpg" alt="" width="370" />
-                <div class="filtered-text">
-                  <h3 class="filtered-title">Growing Business</h3>
-                  <p class="filtered-desc">Додаток</p>
+                <img class="filtered__item--image" src="./images/growing-business.jpg" alt="" width="370" />
+                <div class="filtered__text">
+                  <h3 class="filtered__title">Growing Business</h3>
+                  <p class="filtered__desc">Додаток</p>
                 </div>
               </a>
             </li>
@@ -181,48 +182,48 @@
       </section>
     </main>
 
-    <footer class="footer">
-      <div class="container">
-        <div class="adress-block">
-          <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
-          <address class="footer-address">
-            <ul class="footer-contacts">
-              <li class="footer-item">
-                <a class="location" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow"
+    <footer class="page-footer">
+      <div class="page-footer__container container">
+        <div class="page-footer__adress">
+          <a class="page-footer__logo" href="./index.html"><span class="page-footer__logo--accent">Web</span>Studio</a>
+          <address class="address">
+            <ul class="page-footer__contacts">
+              <li class="page-footer__item">
+                <a class="page-footer__location" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li class="footer-item">
-                <a class="footer-contact-info" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <li class="page-footer__item">
+                <a class="page-footer__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
               </li>
-              <li class="footer-item">
-                <a class="footer-contact-info" href="tel:+380961111111">+38 096 111 11 11</a>
+              <li class="page-footer__item">
+                <a class="page-footer__link" href="tel:+380961111111">+38 096 111 11 11</a>
               </li>
             </ul>
           </address>
         </div>
-        <div class="footer-social">
-          <h3 class="footer-social-title">Приєднуйтесь</h3>
-          <ul class="footer-social-list">
-            <li class="footer-social-item">
+        <div class="social">
+          <h3 class="social__title">Приєднуйтесь</h3>
+          <ul class="social__list">
+            <li class="social__item">
               <a href="#" class="round-icon"
                 ><svg class="icon" width="20" height="20">
                   <use href="./images/icons.svg#instagram"></use></svg
               ></a>
             </li>
-            <li class="footer-social-item">
+            <li class="social__item">
               <a href="#" class="round-icon"
                 ><svg class="icon" width="20" height="20">
                   <use href="./images/icons.svg#twitter"></use></svg
               ></a>
             </li>
-            <li class="footer-social-item">
+            <li class="social__item">
               <a href="#" class="round-icon"
                 ><svg class="icon" width="20" height="20">
                   <use href="./images/icons.svg#facebook"></use></svg
               ></a>
             </li>
-            <li class="footer-social-item">
+            <li class="social__item">
               <a href="#" class="round-icon"
                 ><svg class="icon" width="20" height="20">
                   <use href="./images/icons.svg#linkedin"></use></svg
@@ -230,13 +231,13 @@
             </li>
           </ul>
         </div>
-        <form class="subscribe-form">
-          <label for="sub-email" class="footer-label">Підпишіться на розсилку</label>
-          <div class="subscribe">
-            <input type="email" class="footer-input" placeholder="E-mail" id="sub-email" />
-            <button type="submit" class="footer-button">
+        <form class="subscribe">
+          <label for="sub-email" class="subscribe__label">Підпишіться на розсилку</label>
+          <div class="subscribe--column">
+            <input type="email" class="subscribe__input" placeholder="E-mail" id="sub-email" />
+            <button type="submit" class="subscribe__button">
               Підписатися
-              <svg class="footer-sub-icon" width="24" height="24">
+              <svg class="subscribe__icon--sub" width="24" height="24">
                 <use href="./images/icons.svg#footer-send"></use>
               </svg>
             </button>
