--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list">
             <li class="team__card">
-              <img src="images/ihor.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
+              <img src="./images/ihor.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
               <div class="team__meta">
                 <h3 class="team__meta--name">Ігор Дем'яненко</h3>
                 <p class="team__meta--position">Product Designer</p>
@@ -136,7 +136,7 @@
               </div>
             </li>
             <li class="team__card">
-              <img src="images/olha.jpg" alt="Ольга Рєпіна" width="270" height="260" />
+              <img src="./images/olha.jpg" alt="Ольга Рєпіна" width="270" height="260" />
               <div class="team__meta">
                 <h3 class="team__meta--name">Ольга Рєпіна</h3>
                 <p class="team__meta--position">Frontend Developer</p>
@@ -169,7 +169,7 @@
               </div>
             </li>
             <li class="team__card">
-              <img src="images/mykola.jpg" alt="Микола Тарасов" width="270" height="260" />
+              <img src="./images/mykola.jpg" alt="Микола Тарасов" width="270" height="260" />
               <div class="team__meta">
                 <h3 class="team__meta--name">Микола Тарасов</h3>
                 <p class="team__meta--position">Marketing</p>
@@ -202,7 +202,7 @@
               </div>
             </li>
             <li class="team__card">
-              <img src="images/mihailo.jpg" alt="Михайло Єрмаков" width="270" height="260" />
+              <img src="./images/mihailo.jpg" alt="Михайло Єрмаков" width="270" height="260" />
               <div class="team__meta">
                 <h3 class="team__meta--name">Михайло Єрмаков</h3>
                 <p class="team__meta--position">UI Designer</p>
