--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
 
-  <body class="body">
+  <body>
+    <!-- HEADER -->
     <header class="page-header">
       <div class="page-header__container">
         <a class="logo" href="./index.html"><span class="logo--accent">Web</span>Studio</a>
         <nav>
-          <button type="button" class="navigation__button" data-menu-button>
+          <button type="button" class="navigation__button" aria-expanded="false">
             <svg class="navigation__button--icon" width="40" height="40" aria-label="Перемикач мобільного меню">
               <use class="navigation__button--icon-close" href="./images/icons.svg#nav-close"></use>
               <use class="navigation__button--icon-open" href="./images/icons.svg#nav-open"></use>
             </svg>
           </button>
-          <ul class="navigation" data-menu>
+          <ul class="navigation">
             <li class="navigation__item">
               <a class="navigation__link current" href="./index.html">Студія</a>
             </li>
@@ -63,6 +64,7 @@
     </header>
 
     <main>
+      <!-- HERO -->
       <section class="hero">
         <div class="hero__overlay">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
@@ -70,6 +72,7 @@
         </div>
       </section>
 
+      <!-- BENEFITS -->
       <section class="benefits section">
         <div class="benefits container">
           <h2 class="benefits__title visually-hidden">Наші переваги</h2>
@@ -94,32 +97,44 @@
         </div>
       </section>
 
+      <!-- COMPETENCIES -->
       <section class="competencies section">
         <div class="competencies container">
           <h2 class="competencies__title">Чим ми займаємося</h2>
           <ul class="competencies__list">
             <li class="competencies__item">
               <p class="competencies__text">Десктопні додатки</p>
-              <img src="images/img1.jpg" alt="coding process" width="370" />
+              <img srcset="./images/img1.jpg 1x, ./images/img1-2x.jpg 2x" src="images/img1.jpg" alt="coding process" width="370" />
             </li>
             <li class="competencies__item">
               <p class="competencies__text">Мобільні додатки</p>
-              <img src="images/img2.jpg" alt="mobile app" width="370" />
+              <img srcset="./images/img2.jpg 1x, ./images/img2-2x.jpg 2x" src="images/img2.jpg" alt="mobile app" width="370" />
             </li>
             <li class="competencies__item">
               <p class="competencies__text">Дизайнерські рішення</p>
-              <img src="images/img3.jpg" alt="colors" width="370" />
+              <img srcset="./images/img3.jpg 1x, ./images/img3-2x.jpg 2x" src="images/img3.jpg" alt="colors" width="370" />
             </li>
           </ul>
         </div>
       </section>
 
+      <!-- OUR TEAM -->
       <section class="team section">
         <div class="team container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list">
             <li class="team__card">
-              <img src="./images/ihor.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
+              <picture>
+                <source srcset="./images/desktop-ihor-270.jpg 1x, ./images/desktop-ihor-540.jpg 2x" media="(min-width: 1200px)" />
+                <source srcset="./images/tablet-ihor-354.jpg 1x, ./images/tablet-ihor-708.jpg 2x" media="(min-width: 786px)" />
+                <img
+                  srcset="./images/mobile-ihor-450.jpg 1x, ./images/mobile-ihor-900.jpg 2x"
+                  src="./images/mobile-ihor-450.jpg"
+                  alt="Ігор Дем'яненко"
+                  width="270"
+                  height="260"
+                />
+              </picture>
               <div class="team__meta">
                 <h3 class="team__meta--name">Ігор Дем'яненко</h3>
                 <p class="team__meta--position">Product Designer</p>
@@ -152,7 +167,11 @@
               </div>
             </li>
             <li class="team__card">
-              <img src="./images/olha.jpg" alt="Ольга Рєпіна" width="270" height="260" />
+              <picture>
+                <source srcset="./images/desktop-olha-270.jpg 1x, ./images/desktop-olha-540.jpg 2x" media="(min-width: 1200px)" />
+                <source srcset="./images/tablet-olha-354.jpg 1x, ./images/tablet-olha-708.jpg 2x" media="(min-width: 786px)" />
+                <img srcset="./images/mobile-olha-900.jpg 2x" src="./images/mobile-olha-450.jpg" alt="Ольга Рєпіна" width="270" height="260" />
+              </picture>
               <div class="team__meta">
                 <h3 class="team__meta--name">Ольга Рєпіна</h3>
                 <p class="team__meta--position">Frontend Developer</p>
@@ -185,7 +204,11 @@
               </div>
             </li>
             <li class="team__card">
-              <img src="./images/mykola.jpg" alt="Микола Тарасов" width="270" height="260" />
+              <picture>
+                <source srcset="./images/desktop-mykola-270.jpg 1x, ./images/desktop-mykola-540.jpg 2x" media="(min-width: 1200px)" />
+                <source srcset="./images/tablet-mykola-354.jpg 1x, ./images/tablet-mykola-708.jpg 2x" media="(min-width: 786px)" />
+                <img srcset="./images/mobile-mykola-900.jpg 2x" src="./images/mobile-mykola-450.jpg" alt="Микола Тарасов" width="270" height="260" />
+              </picture>
               <div class="team__meta">
                 <h3 class="team__meta--name">Микола Тарасов</h3>
                 <p class="team__meta--position">Marketing</p>
@@ -218,7 +241,17 @@
               </div>
             </li>
             <li class="team__card">
-              <img src="./images/mihailo.jpg" alt="Михайло Єрмаков" width="270" height="260" />
+              <picture>
+                <source srcset="./images/desktop-mihailo-270.jpg 1x, ./images/desktop-mihailo-540.jpg 2x" media="(min-width: 1200px)" />
+                <source srcset="./images/tablet-mihailo-354.jpg 1x, ./images/tablet-mihailo-708.jpg 2x" media="(min-width: 786px)" />
+                <img
+                  srcset="./images/mobile-mihailo-900.jpg 2x"
+                  src="./images/mobile-mihailo-450.jpg"
+                  alt="Михайло Єрмаков"
+                  width="270"
+                  height="260"
+                />
+              </picture>
               <div class="team__meta">
                 <h3 class="team__meta--name">Михайло Єрмаков</h3>
                 <p class="team__meta--position">UI Designer</p>
@@ -254,6 +287,7 @@
         </div>
       </section>
 
+      <!-- CLIENTS -->
       <section class="clients section">
         <div class="clients container">
           <h2 class="clients__title">Постійні клієнти</h2>
@@ -299,6 +333,7 @@
       </section>
     </main>
 
+    <!-- FOOTER -->
     <footer class="page-footer">
       <div class="page-footer__container container">
         <div class="page-footer__adress">
@@ -363,8 +398,7 @@
       </div>
     </footer>
 
-    <!-- modal -->
-
+    <!-- MODAL -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal__close-button" data-modal-close>
